--- a/server/package.json
+++ b/server/package.json
@@ -10,13 +10,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
+    "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "mediasoup": "^3.15.7",
     "mongoose": "^8.13.0",
@@ -25,6 +29,7 @@
     "nodemailer": "^6.10.0",
     "pdfkit": "^0.16.0",
     "socket.io": "^4.8.1",
-    "stripe": "^18.0.0"
+    "stripe": "^18.0.0",
+    "uuid": "^11.1.0"
   }
 }
