--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "hls.js": "^1.6.2",
     "js-cookie": "^3.0.5",
@@ -18,6 +19,7 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-canvas-draw": "^1.2.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
