--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,9 @@
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.12.2",
+    "framer-motion": "^12.9.4",
+    "gsap": "^3.13.0",
     "hls.js": "^1.6.2",
     "js-cookie": "^3.0.5",
     "mediasoup-client": "^3.9.5",
@@ -24,7 +27,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
