--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.0",
     "pdfkit": "^0.16.0",
+    "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "stripe": "^18.0.0",
     "uuid": "^11.1.0"
