--- a/server/package.json
+++ b/server/package.json
@@ -34,5 +34,8 @@
     "socket.io": "^4.8.1",
     "stripe": "^18.0.0",
     "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
