--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "scripts": {
     "client": "npm run dev --prefix client",
     "server": "npm start --prefix server",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "npm run build --prefix client",
+    "build:client": "npm run build --prefix client",
+    "deploy:client": "cd client && npm run build && vercel --prod",
+    "deploy:server": "cd server && vercel --prod",
+    "deploy": "npm run deploy:server && npm run deploy:client",
+    "install:all": "npm install && npm install --prefix client && npm install --prefix server"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
